Import code from EIDAS-Sources-1.4.4.zip in eIDAS-node-1.4.4.zip
sha256 of outer eidas-node zip: 2aa6ca1cc26f70f586b187dc657b5644e69d4ccfd52fe449cb3ef2b1d0df43e0